# system-prompt-leak-scan-py

./: .gitignore  README.md  pyproject.toml
src/system_prompt_leak_scan/: __init__.py  scan.py
tests/: test_scan.py
